monitoring/IngressRoute-grafana-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`grafana.cluster.anderwerse.de`)
      services:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
  tls:
    secretName: monitoring-tls-certificate
